<resources>
    <string name="app_name">Driverlicense</string>
    <string name="driver_license_registration">Driver License Registration</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="nationality">Nationality</string>
    <string name="sex">Sex</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="address">Address</string>
    <string name="condition">Condition</string>
    <string name="restriction">Restriction</string>
    <string name="submit">submit</string>
    <string name="eyes_color">Eyes Color</string>
    <string name="blood_type">Blood Type</string>
    <string name="agency_code">Agency Code</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="license_number">License Number</string>
    <string name="back_to_main">back to Main</string>
    <string name="no_data">No Data</string>
</resources>