<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:background="@drawable/smokey"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/driver_license_registration"
            android:textColor="#4b0082"
            android:gravity="center"
            android:typeface="serif"
            android:textSize="30sp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColorHint="@color/purple_500"
            android:id="@+id/lastname"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/first_name"
            android:id="@+id/firstname"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middle_name"
            android:textColorHint="@color/purple_500"
            android:id="@+id/middlename"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/nationality"
            android:id="@+id/nationality"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/sex"
            android:id="@+id/sex"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:textColorHint="@color/purple_500"
            android:id="@+id/birthdate"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:textColorHint="@color/purple_500"
            android:id="@+id/weight"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/height"
            android:id="@+id/height"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/address"
            android:id="@+id/address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/license_number"
            android:id="@+id/licenseno"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/expiration_date"
            android:id="@+id/expirationdate"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/agency_code"
            android:id="@+id/agencycode"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/blood_type"
            android:id="@+id/bloodtype"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/purple_500"
            android:hint="@string/eyes_color"
            android:id="@+id/eyescolor"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/restriction"
            android:textColorHint="@color/purple_500"
            android:id="@+id/restriction"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/condition"
            android:textColorHint="@color/purple_500"
            android:id="@+id/condition"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:paddingLeft="100sp"
            android:paddingRight="100sp"
            android:onClick="submitall"/>

    </LinearLayout>

</ScrollView>